--- a/RevManCovidenceValidation/RevManCovidenceValidation.csproj
+++ b/RevManCovidenceValidation/RevManCovidenceValidation.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=12.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>packages\CsvHelper.12.2.1\lib\net47\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="F23.StringSimilarity, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\F23.StringSimilarity.3.1.0\lib\netstandard1.0\F23.StringSimilarity.dll</HintPath>
     </Reference>
@@ -186,8 +189,10 @@
     <Compile Include="DataValidator.Step2.cs" />
     <Compile Include="DataValidator.Step3.cs" />
     <Compile Include="DataValidator.Step4.cs" />
+    <Compile Include="EnrichedRevManToSubgroup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RevManSummaryToCSV.cs" />
     <Compile Include="Study.cs" />
   </ItemGroup>
   <ItemGroup>
